--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -107,10 +107,10 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="content"> 
       <!-- ################################################################################################ -->
       <h1>&lt;h1&gt; to &lt;h6&gt; - Headline Colour and Size Are All The Same</h1>
-      <img class="imgr borderedbox inspace-5" src="../images/demo/imgr.gif" alt="">
+      <img class="imgr borderedbox inspace-5" src="../images/m/demo/imgr.gif" alt="">
       <p>Aliquatjusto quisque nam consequat doloreet vest orna partur scetur portortis nam. Metadipiscing eget facilis elit sagittis felisi eger id justo maurisus convallicitur.</p>
       <p>Dapiensociis <a href="#">temper donec auctortortis cumsan</a> et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt pellentum tincidunt vel lorem.</p>
-      <img class="imgl borderedbox inspace-5" src="../images/demo/imgl.gif" alt="">
+      <img class="imgl borderedbox inspace-5" src="../images/m/demo/imgl.gif" alt="">
       <p>This is a W3C compliant free website template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="http://www.os-templates.com/template-terms">website template licence</a>.</p>
       <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more website templates visit our <a href="http://www.os-templates.com/">free website templates</a> section.</p>
       <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
@@ -159,7 +159,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="../images/m/demo/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
@@ -173,7 +173,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="../images/m/demo/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
@@ -187,7 +187,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="../images/m/demo/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
