--- a/html/course.html
+++ b/html/course.html
@@ -44,7 +44,7 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <li class="dropdown nav-li-wrapper">
-                            <a href="#" class="nav-link-a" role="button">Home</a>
+                            <a href="homepage.html" class="nav-link-a" role="button">Home</a>
                         </li>
 
                         <li class="dropdown nav-li-wrapper">
@@ -64,7 +64,7 @@
                         </li>
 
                         <li class="dropdown nav-li-wrapper">
-                            <a href="#" class="nav-link-a" role="button">Marks</a>
+                            <a href="marks.html" class="nav-link-a" role="button">Marks</a>
                         </li>
 
                         <li class="dropdown nav-li-wrapper">
@@ -77,7 +77,9 @@
             </div><!-- /.container-fluid -->
         </nav>
     </div>
-    <div id="body">
+    <div id="body" style="padding:10px 40px 40px 40px;">
+
+        <h1 style="padding-bottom:10px;">COMP 307</h1>
 
         <div class="panel-group" id="accordion">
 
@@ -89,10 +91,98 @@
                     </a>
                 </div>
                 <div id="collapse1" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
+                    <div class="panel-body">
+
+                        <table class="table" style="max-width: 800px;">
+                            <thead>
+                            <tr>
+                                <th>Week</th>
+                                <th>Description</th>
+                                <th>Lecture</th>
+                                <th>Video</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Machine Learning 3: Decision tree learning method</td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+                                <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
+
+                            </tr>
+                            </tbody>
+                        </table>
+
                     </div>
                 </div>
             </div>
@@ -106,10 +196,62 @@
                     </a>
                 </div>
                 <div id="collapse2" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
+                    <div class="panel-body">
+
+                        <div style="float:left;">
+                            <table class="table" style="max-width: 700px; margin:0 auto;">
+                                <thead>
+                                <tr>
+                                    <th>Assignment</th>
+                                    <th>Marks (%)</th>
+                                    <th>Grade (%)</th>
+                                    <th>Weight (%)</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>Assignment One</td>
+                                    <td>98</td>
+                                    <td>A+</td>
+                                    <td>15</td>
+
+                                </tr>
+                                <tr>
+                                    <td>Assignment Two</td>
+                                    <td>78.2</td>
+                                    <td>B+</td>
+                                    <td>15</td>
+
+                                </tr>
+                                <tr>
+                                    <td>Project</td>
+                                    <td>85.5</td>
+                                    <td>A</td>
+                                    <td>50</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div style="float:right;">
+                            <table class="table" style="max-width: 700px; border:none;">
+                                <thead>
+                                <tr>
+                                    <th colspan="2">Average</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>B+</td>
+                                    <td>77.6%</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2">80% Complete</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -123,10 +265,45 @@
                     </a>
                 </div>
                 <div id="collapse3" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
+                    <div class="panel-body">
+                        <h3>Course Content</h3>
+                        <p>Artificial Intelligence (AI) is intelligence exhibited by machines. Examples include
+                            self-driving cars, automatically planning a holiday, generating sensible conversation,
+                            learning to predict fog at Wellington Airport, reading a web page to get the answer to a
+                            question, recognising handwritten digits, detecting identity by checking fingerprints,
+                            detecting network intrusions, controlling robot actuators, processing and recognising images
+                            and signals, discovering and detecting the mathematical or logical relationship between
+                            output variables and a large number of inputs in economic and engineering tasks, or
+                            optimising parameter values in complex engineering problems. COMP 307 is an introduction to
+                            the ideas and techniques that computer scientists have developed to address these kinds of
+                            tasks.
+
+                            The lectures cover following main topics: search techniques, machine learning including
+                            basic learning concepts and algorithms, neural networks and evolutionary learning, reasoning
+                            under uncertainty, planning and scheduling, knowledge based systems and AI Philosophy. The
+                            course includes a substantial amount of programming. The course will cover both science and
+                            engineering applications.
+
+                            This document sets out the workload and assessment requirements for COMP 307. It also
+                            provides contact information for staff involved in the course. If the contents of this
+                            document are altered during the course, you will be advised of the change by an announcement
+                            in lectures and/or on the course web site. A printed copy of this document is held in the
+                            School Office.</p>
+
+                        <h3>Course learning objectives</h3>
+                        <p>Students who pass this course should be able to:</p>
+
+                        <ol class="list-group">
+                            <li>Understand fundamental concepts and techniques of artificial intelligence, in areas such
+                                as
+                                search, machine learning, evolutionary computing, reasoning under uncertainty, rule
+                                based
+                                systems, and planning. (BE 3(a), 3(c), 3(d), 3(e)); (BSc COMP 1, 2, 3, 4).
+                            </li>
+                            <li>Apply these concepts and techniques to specific problems (including engineering
+                                applications). (BE 3(a), 3(c), 3(d), 3(e), 3(f)); (BSc COMP 1, 2, 3, 4).
+                            </li>
+                        </ol>
                     </div>
                 </div>
             </div>
@@ -140,7 +317,15 @@
                     </a>
                 </div>
                 <div id="collapse4" class="panel-collapse collapse">
-                    <div class="panel-body"><img src="../images/nobel.jpeg" />
+                    <div class="panel-body">
+                        <div style="float:left; width:15%; ">
+                            <img style="" src="../images/nobel.jpeg"/>
+                        </div>
+                        <div style="float:right; width:80%;">
+                            <h3 style="padding-top: 0; margin-top: 0;">James Noble</h3>
+                            <h4>Coordinator</h4>
+                            <p>355 Cotton, Kelburn</p>
+                        </div>
                     </div>
                 </div>
             </div>
