--- a/index.html
+++ b/index.html
@@ -11,143 +11,62 @@
 
     <!-- Bootstrap -->
     <link href="layout/scripts/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body id="top">
 <!-- Jquery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="layout/scripts/jquery.min.js"></script>
 
 <!-- Boot strap -->
 <script src="layout/scripts/bootstrap.min.js"></script>
 
-<!-- Side bar -->
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" style="text-decoration:none;" onclick="closeNav()">&times;</a>
-    <ul style="list-style: none; padding: 0px;">
-        <li class="nav-li-wrapper sidebar-wrapper"><a href="#">Home</a></li>
-        <li class="nav-li-wrapper sidebar-wrapper"><a href="#">Land</a></li>
-        <li class="nav-li-wrapper sidebar-wrapper"><a href="#">Staff</a></li>
-        <li class="nav-li-wrapper sidebar-wrapper"><a href="#">Block Info</a></li>
-        <li class="nav-li-wrapper sidebar-wrapper"><a href="#">Tasks</a></li>
-    </ul>
-</div>
+<div id="container">
 
+    <div id="header">
 
-<!-- Navigation bar -->
-<nav class="navbar navbar-inverse" style="padding:10px;">
+        <!-- Banner bar -->
+        <nav class="navbar navbar-inverse" style="padding-bottom:0;">
 
-    <a href="index.html" >
-        <img src="images/vic_logo.jpg" style="height:60px; float:left; margin: auto 0; margin-left: 40px;" />
-        <img src="images/logo.jpg" style="height:50px; float:left; margin: auto 0; margin-left: 40px;" />
-    </a>
+            <a href="index.html">
+                <img src="images/vic_logo.jpg" style="height:60px; float:left; margin: auto 0; margin-left: 40px;"/>
+                <img src="images/logo.jpg" style="height:50px; float:left; margin: auto 0; margin-left: 40px;"/>
+            </a>
 
-    <div class="container-fluid" style="float:right;">
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown nav-li-wrapper">
-                    <a href="#" class="dropdown-toggle nav-link-a" data-toggle="dropdown" role="button"
-                       aria-haspopup="true"
-                       aria-expanded="false">Home page<span class="caret"></span></a>
-                    <ul class="dropdown-menu drop-down-wrapper">
-                        <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Profile</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Log out</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown nav-li-wrapper">
-                    <a href="#" class="dropdown-toggle nav-link-a" data-toggle="dropdown" role="button"
-                       aria-haspopup="true"
-                       aria-expanded="false">Course<span class="caret"></span></a>
-                    <ul class="dropdown-menu drop-down-wrapper">
-                        <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Profile</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Log out</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown nav-li-wrapper">
-                    <a href="#" class="dropdown-toggle nav-link-a" data-toggle="dropdown" role="button"
-                       aria-haspopup="true"
-                       aria-expanded="false">Account<span class="caret"></span></a>
-                    <ul class="dropdown-menu drop-down-wrapper">
-                        <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Profile</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Log out</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-
-
-<div class="wrapper bgded overlay" style="background-image:url('images/m/demo/backgrounds/01.png');">
-    <div id="pageintro" class="hoc clear">
-        <article class="introtxt" style="margin: 0 auto;">
-            <h2 class="heading">Welcome to Victoria</h2>
-            <p>Arcu tortor mauris sit amet sagittis ex aliquam augue urna placerat id rutrum</p>
-            <footer>
-                <ul class="nospace inline pushright">
-                    <li><a class="btn" href="#">Current Student</a></li>
-                    <li><a class="btn inverse" href="#">Prospective Student</a></li>
-                </ul>
-            </footer>
-        </article>
+        </nav>
     </div>
-</div>
+    <div id="body">
 
-    <footer id="footer" class="hoc clear">
-        <div class="one_third first">
-            <h6 class="title">Aliquet iaculis venenatis</h6>
-            <ul class="nospace linklist contact">
-                <li><i class="fa fa-map-marker"></i>
-                    <address>
-                        Street Name &amp; Number, Town, Postcode/Zip
-                    </address>
-                </li>
-                <li><i class="fa fa-phone"></i> +00 (123) 456 7890<br>
-                    +00 (123) 456 7890
-                </li>
-                <li><i class="fa fa-fax"></i> +00 (123) 456 7890</li>
-                <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
-            </ul>
+        <div class="wrapper bgded overlay" style="background-image:url('images/banner.jpg');">
+            <div id="pageintro" class="hoc clear">
+                <article class="introtxt" style="margin: 0 auto;">
+                    <h2 class="heading">Welcome to Victoria</h2>
+                    <p>Where children get molested and dreams go to die</p>
+                    <footer>
+                        <ul class="nospace inline pushright">
+                            <li><a class="btn" href="html/homepage.html">Current Student</a></li>
+                            <li><a class="btn inverse" href="#">Prospective Student</a></li>
+                        </ul>
+                    </footer>
+                </article>
+            </div>
         </div>
-        <div class="one_third">
-            <h6 class="title">aliquam elit enim dictum</h6>
-            <ul class="nospace linklist">
-                <li><a href="#">hendrerit risus nulla consectetur</a></li>
-                <li><a href="#">sapien a tempor neque faucibus vitae</a></li>
-                <li><a href="#">vestibulum nisi sed orci condimentum</a></li>
-                <li><a href="#">faucibus ligula facilisis phasellus</a></li>
-                <li><a href="#">venenatis mauris vel varius tincidunt</a></li>
-            </ul>
-        </div>
-        <div class="one_third">
-            <h6 class="title">egestas diam sollicitudin</h6>
-            <ul class="nospace linklist">
-                <li><a href="#">non fusce quis dictum vitae accumsan</a></li>
-                <li><a href="#">erat in hac habitasse platea dictumst</a></li>
-                <li><a href="#">sed mi arcu mattis gravida feugiat</a></li>
-                <li><a href="#">aliquam nunc etiam neque lobortis</a></li>
-                <li><a href="#">tristique integer nunc eget dictum</a></li>
-            </ul>
-        </div>
-    </footer>
-</div>
 
-<div class="wrapper row5">
-    <div id="copyright" class="hoc clear">
-        <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Victoria University Wellington</a></p>
     </div>
-</div>
+    <div class="wrapper row5 footer" id="footer">
+        <div id="copyright" class="hoc clear">
+            <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Victoria University
+                Wellington</a></p>
+        </div>
+    </div>
 
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-<!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
-<!-- IE9 Placeholder Support -->
-<script src="layout/scripts/jquery.placeholder.min.js"></script>
-<!-- / IE9 Placeholder Support -->
+    <!-- JAVA SCRIPT -->
+    <script src="layout/scripts/jquery.min.js"></script>
+    <script src="layout/scripts/jquery.backtotop.js"></script>
+    <script src="layout/scripts/jquery.mobilemenu.js"></script>
+
+    <!-- IE9 Placeholder Support -->
+    <script src="layout/scripts/jquery.placeholder.min.js"></script>
+    <!-- / IE9 Placeholder Support -->
+</div>
 </body>
 </html>
