--- a/html/course.html
+++ b/html/course.html
@@ -12,6 +12,9 @@
     <!-- Bootstrap -->
     <link href="../layout/scripts/bootstrap.min.css" rel="stylesheet">
 
+        <!-- Login Popup -->
+    <link href="../layout/styles/popup.css" rel="stylesheet">
+
 </head>
 <body id="top">
 <!-- Jquery -->
@@ -19,6 +22,7 @@
 
 <!-- Boot strap -->
 <script src="../layout/scripts/bootstrap.min.js"></script>
+
 
 <div id="container">
 
@@ -77,6 +81,10 @@
             </div><!-- /.container-fluid -->
         </nav>
     </div>
+
+    <div class="overlayLogin"> <!-- background blur -->
+            </div>
+
     <div id="body">
 
         <div class="panel-group" id="accordion">
@@ -172,6 +180,37 @@
         </div>
     </div>
 
+
+
+
+<div class="popupLogin">
+
+
+
+<form action="" method="post" name="Login_Form" class="form-signin" onsubmit="return false">
+    <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
+
+      <input type="text" class="form-control" name="Username" placeholder="Username" required="" autofocus="" />
+      <input type="password" class="form-control" name="Password" placeholder="Password" required=""/>
+
+      <button id="login" class="btn btn-lg btn-primary btn-block"  name="Submit" value="Login" type="Submit">Login</button>
+</form>
+
+
+</div>
+
+    <!-- Login Popup -->
+<script>
+    $( document ).ready(function() {
+        $(".overlayLogin, .popupLogin").fadeToggle();
+    })
+
+    $( "#login" ).click(function(){
+    $(".overlayLogin, .popupLogin").fadeToggle();
+})
+
+</script>
+
     <!-- JAVA SCRIPT -->
     <script src="layout/scripts/jquery.min.js"></script>
     <script src="layout/scripts/jquery.backtotop.js"></script>
@@ -180,6 +219,10 @@
     <!-- IE9 Placeholder Support -->
     <script src="layout/scripts/jquery.placeholder.min.js"></script>
     <!-- / IE9 Placeholder Support -->
+
+
+
+
 </div>
 </body>
 </html>
