--- a/html/marks.html
+++ b/html/marks.html
@@ -376,12 +376,8 @@
     </div>
 
     <!-- JAVA SCRIPT -->
-    <script src="layout/scripts/jquery.min.js"></script>
-    <script src="layout/scripts/jquery.backtotop.js"></script>
-    <script src="layout/scripts/jquery.mobilemenu.js"></script>
+    <script src="assets/js/main.js"></script>
 
-    <!-- IE9 Placeholder Support -->
-    <script src="layout/scripts/jquery.placeholder.min.js"></script>
     <!-- / IE9 Placeholder Support -->
 </div>
 </body>
