minor changes to course and homepage

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -86,14 +86,27 @@
             </div><!-- /.container-fluid -->
         </nav>
     </div>
-    <div id="body">
+    <div id="body" style="padding:20px;">
+
+        <h1 style="padding-bottom:10px;">Notifications</h1>
+        <div class="alert alert-danger" style="">
+            <h4>Important</h4>
+            <p>You missed the deadline for COMP7 307- Assignment 4</p>
+        </div>
+
+        <div class="alert alert-warning" style="">
+            <h4>Warning</h4>
+            <p>You have 1:58 hours to submit ENGR 301 Assignment 5 - Report</p>
+        </div>
+
+        <div class="alert alert-info" style="">
+            <h4>Information</h4>
+            <p>There is a new assignment for COMP 307: Assignment 5 - Machine Learning</p>
+        </div>
 
         <div class="alert alert-success" style="padding-top:15px;">
-            <h4>Too many elements in the sidebar</h4>
-            <p>Currently there are 4. The Maximum is 3. Please remove sidebar class from elements you do not want to
-                appear in the sidebar.</p>
-
-            <p>The following sidebar elements were not added: </p>
+            <h4>Success</h4>
+            <p>Successfully submitted Assignment Three for SWEN 303</p>
         </div>
 
     </div>
