Fix course popup, comment out index popup for now

--- a/html/course.html
+++ b/html/course.html
@@ -25,6 +25,7 @@
 
     <!-- Style sheet -->
     <link rel="stylesheet" href="../layout/styles/normalize.css">
+    <link rel="stylesheet" href="../layout/styles/normalize.css">
     <link rel="stylesheet" href="../layout/styles/animate.min.css">
     <link href="../layout/styles/styles.css" rel="stylesheet">
 
@@ -100,8 +101,8 @@
         </nav>
     </div>
 
-    <!--<div class="overlayLogin"> &lt;!&ndash; background blur &ndash;&gt;-->
-    <!--</div>-->
+    <div class="overlayLogin">
+    </div>
 
     <div id="body" style="padding:10px 40px 40px 40px;">
 
