--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap -->
     <link href="layout/scripts/bootstrap.min.css" rel="stylesheet">
 
+    <!-- popup -->
+    <link href="layout/styles/popup.css" rel="stylesheet">
+
 
 </head>
 <body id="top">
@@ -44,7 +47,8 @@
     </div>
 
 
-    <div class="overlayLogin"></div> <!-- background blur -->
+   <!-- <div class="overlayLogin"></div>  background blur -->
+
 
     <div class="wrapper bgded overlay" style="background-image:url('images/banner.jpg');">
         <div id="pageintro" class="hoc clear">
@@ -91,10 +95,12 @@
 <script src="layout/scripts/jquery.placeholder.min.js"></script>
 <!-- / IE9 Placeholder Support -->
 
+
+     <!-- </div> / background blur -->
+
+
+<!--
 <div class="popupLogin">
-</div> <!-- / background blur -->
-
-
 <form action="" method="post" name="Login_Form" class="form-signin">
     <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
 
@@ -103,7 +109,8 @@
 
     <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">Login</button>
 </form>
-
+</div>
+-->
 
 <!-- JAVA SCRIPT -->
 <script src="layout/scripts/jquery.min.js"></script>
