--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@
                 <footer>
                     <ul  class="nospace inline pushright">
                         <li><a id="current" class="btn">Current Student</a></li>
-                        <li><a class="btn inverse" href="#">Prospective Student</a></li>
+                        <li><a class="btn inverse" href="html/prospective.html">Prospective Student</a></li>
                     </ul>
                 </footer>
             </article>
         </div>
+        <div class="wrapper row5 footer" id="footer">
+    <div id="copyright" class="hoc clear">
+        <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Victoria University
+            Wellington</a></p>
+    </div>
+</div>
     </div>
 
     <div class="one_third">
@@ -73,12 +79,7 @@
     </div>
 
 
-<div class="wrapper row5 footer" id="footer">
-    <div id="copyright" class="hoc clear">
-        <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Victoria University
-            Wellington</a></p>
-    </div>
-</div>
+
 </div>
 
 
