added study areas

--- a/html/study-areas.html
+++ b/html/study-areas.html
@@ -63,7 +63,8 @@
                             <ul class="dropdown-menu drop-down-wrapper">
                                 <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Engineering</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Computer Science</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Computer Science</a>
+                                </li>
                             </ul>
                         </li>
 
@@ -76,7 +77,7 @@
                             <ul class="dropdown-menu drop-down-wrapper">
                                 <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Your Degree</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="study-areas.html">Study Areas</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Study Areas</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Papers</a></li>
                                 <li role="separator" class="divider"></li>
@@ -90,11 +91,14 @@
                                 Careers
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Potential Careers</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Potential Careers</a>
+                                </li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Work Experience</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Work Experience</a>
+                                </li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Awards & Scholarships</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Awards &
+                                    Scholarships</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -105,17 +109,83 @@
     </div>
 
 
-
-
-    <div class="wrapper bgded overlay" style="background-image:url('../images/prospective_banner.jpg'); ">
-        <div id="prospective" class="hoc clear">
+    <div class="wrapper bgded" style="background-color:rgb(255,255,255)">
+        <div id="prospective" class="hoc" style="" >
             <article class="introtxt" style="margin: 0 auto;">
-                <h1 class="heading">About</h1>
-                <p>Almost all aspects of the modern world involve computers. But it's the software they run that turns these lumps of silicon, plastic and metal into the useful tools that can drive our economy and improve lives.
-                    Computer science is about the building blocks of software development. These are the individual programming elements that make a complicated software system work, letting applications like Google process large amounts of data in seconds.
+                <h1 class="heading">Study Areas</h1>
+                <p style="font-size:16px;">
+                    › Learn to design and creatively apply emerging and established technology to solve problems with
+                    the
+                    School of Engineering and Computer Science.
+                    <br>
+                    <br>
+                    › Our innovative and flexible programmes will prepare you for successful careers as digital
+                    engineers
+                    and computer scientists. Work with students from all over the world in an inspiring and supportive
+                    learning environment.
                 </p>
             </article>
+            <hr/>
+            <div class="prospective-study-area">
+                <img src="../images/3d-graphics.jpeg"/>
+                <div class="right-text">
+                    <button class="btn btn-primary">Find out more</button>
+                </div>
+
+                <div class="center-text">
+                    <h2>Computer Graphics</h2>
+                    <p>Gain the technical skills you need to create computer graphics for film and television, computer
+                        games and the web.</p>
+                </div>
+            </div>
+            <hr/>
+
+            <div class="prospective-study-area">
+                <img src="../images/ecen.jpg"/>
+                <div class="right-text">
+                    <button class="btn btn-primary">Find out more</button>
+                </div>
+
+                <div class="center-text">
+                    <h2>Electronics and Computer Systems</h2>
+                    <p>From smartphones to drones—study Electronics and Computer Systems at Victoria and learn to design
+                        and build the systems that are shaping our world..</p>
+                </div>
+            </div>
+            <hr/>
+
+            <div class="prospective-study-area">
+                <img src="../images/servers.jpg"/>
+                <div class="right-text">
+                    <button class="btn btn-primary">Find out more</button>
+                </div>
+
+                <div class="center-text">
+                    <h2>Networking and Security</h2>
+                    <p>Study Networking and Security and learn to design and build strong, safe information
+                        networks.</p>
+                </div>
+            </div>
+            <hr/>
+
+
+            <div class="prospective-study-area">
+                <img src="../images/code.jpg"/>
+                <div class="right-text">
+                    <button class="btn btn-primary">Find out more</button>
+                </div>
+
+                <div class="center-text">
+                    <h2>Software and Computer Science</h2>
+                    <p>Study Software Engineering and Computer Science and be at the forefront of the information
+                        revolution</p>
+                </div>
+            </div>
+            <hr/>
+
+
         </div>
+
 
         <div class="wrapper row5 footer" id="footer">
             <div id="copyright" class="hoc clear">
@@ -125,14 +195,6 @@
         </div>
 
     </div>
-
-
-
-
-
-
-
-
 
 
     <!-- JAVA SCRIPT -->
