added an about-engeneering and refactored current about to be about-compsci

--- a/html/about-compsci.html
+++ b/html/about-compsci.html
@@ -61,9 +61,9 @@
                                 About
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Engineering</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="about-engr.html">Engineering</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Computer Science</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="">Computer Science</a></li>
                             </ul>
                         </li>
 
@@ -110,7 +110,7 @@
     <div class="wrapper bgded overlay" style="background-image:url('../images/prospective_banner.jpg'); ">
         <div id="prospective" class="hoc clear">
             <article class="introtxt" style="margin: 0 auto;">
-                <h1 class="heading">About</h1>
+                <h1 class="heading">About Computer Science</h1>
                 <p>Almost all aspects of the modern world involve computers. But it's the software they run that turns these lumps of silicon, plastic and metal into the useful tools that can drive our economy and improve lives.
                     Computer science is about the building blocks of software development. These are the individual programming elements that make a complicated software system work, letting applications like Google process large amounts of data in seconds.
                 </p>
