--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <footer>
                     <ul  class="nospace inline pushright">
                         <li><a id="current" class="btn">Current Student</a></li>
-                        <li><a class="btn inverse" href="html/prospective.html">Prospective Student</a></li>
+                        <li><a class="btn inverse" href="html/about-compsci.html">Prospective Student</a></li>
                     </ul>
                 </footer>
             </article>
